--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ jobs:
       before_install: ./scripts/install_script.sh $TRAVIS_COMMIT
       install: skip
       script:
-        - ./scripts/add.sh
+        - ./cli_tests/add.sh
