--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,14 @@ jobs:
       dist: xenial
       language: go
       go: 1.16.x
+      env:
+        - CHANGE_MINIKUBE_NONE_USER=true
+        - MINIKUBE_WANTUPDATENOTIFICATION=false
+        - MINIKUBE_WANTREPORTERRORPROMPT=false
+        - MINIKUBE_HOME=$HOME
+        - KUBECONFIG=$HOME/.kube/config
+      before_install:
+        - sudo apt-get -qq -y install conntrack
       before_script:
         # Minikube
         - curl -Lo kubectl https://storage.googleapis.com/kubernetes-release/release/v1.20.1/bin/linux/amd64/kubectl && chmod +x kubectl && sudo mv kubectl /usr/local/bin/
