--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 stages:
   # - kind
-  # - minikube
-  - integration
+  - minikube
+  # - integration
 
 sudo: required
 
@@ -24,9 +24,9 @@ jobs:
       before_install:
         - sudo apt-get -qq -y install conntrack
         - ./scripts/setup_minikube.sh $TRAVIS_COMMIT $KUBECONFIG
-      install: skip
-      script:
-        - ./cli_tests/help.sh
+      # install: skip
+      # script:
+      #   - ./cli_tests/help.sh
 
     - stage: kind
       sudo: required
@@ -67,13 +67,13 @@ jobs:
         # - echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USERNAME" --password-stdin
         # - docker build -t shipasoftware/ketch:$TRAVIS_COMMIT .
         # - docker push shipasoftware/ketch:$TRAVIS_COMMIT
-        # Kubebuiler & Kustomize
-        - make install-kubebuilder KUBEBUILDER_INSTALL_DIR=/tmp/kubebuilder
-        - make install-kustomize KUSTOMIZE_INSTALL_DIR=/tmp
-        - export PATH=$PATH:/tmp
-        # Helm
-        - curl https://baltocdn.com/helm/signing.asc | sudo apt-key add -
-        - sudo apt-get install apt-transport-https --yes
-        - echo "deb https://baltocdn.com/helm/stable/debian/ all main" | sudo tee /etc/apt/sources.list.d/helm-stable-debian.list
-        - sudo apt-get update
-        - sudo apt-get install helm
+        # # Kubebuiler & Kustomize
+        # - make install-kubebuilder KUBEBUILDER_INSTALL_DIR=/tmp/kubebuilder
+        # - make install-kustomize KUSTOMIZE_INSTALL_DIR=/tmp
+        # - export PATH=$PATH:/tmp
+        # # Helm
+        # - curl https://baltocdn.com/helm/signing.asc | sudo apt-key add -
+        # - sudo apt-get install apt-transport-https --yes
+        # - echo "deb https://baltocdn.com/helm/stable/debian/ all main" | sudo tee /etc/apt/sources.list.d/helm-stable-debian.list
+        # - sudo apt-get update
+        # - sudo apt-get install helm
