--- a/.travis.yml
+++ b/.travis.yml
@@ -87,3 +87,4 @@ jobs:
       before_script:
         - curl -s https://raw.githubusercontent.com/rancher/k3d/main/install.sh | bash
         - k3d cluster create mycluster
+        - echo "test"
