--- a/.travis.yml
+++ b/.travis.yml
@@ -88,3 +88,6 @@ jobs:
         - curl -s https://raw.githubusercontent.com/rancher/k3d/main/install.sh | bash
         - k3d cluster create mycluster
         - echo "test"
+      provider: script
+      script:
+        - bash scripts/setup_k3d.sh
