--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 jobs:
   include:
-    - stage: lint
-      before_script: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.41.1
-      script:
-        - golangci-lint run
-    - stage: install
+    - stage: install/lint
       language: go
+      before_script: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.41.1
       go: "1.16"
       script:
         - ./install_script.sh $TRAVIS_COMMIT
+        - golangci-lint run
