--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ jobs:
   include:
     - stage: install/lint
       language: go
-      before_script: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s v1.41.1
+      before_script:
+        - curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.41.1
+        - go mod download
       go: "1.16"
       script:
         - ./install_script.sh $TRAVIS_COMMIT
